--- a/ax-permission/src/main/res/layout/item_ax_permission.xml
+++ b/ax-permission/src/main/res/layout/item_ax_permission.xml
@@ -7,9 +7,6 @@
         <variable
             name="permissionItem"
             type="com.ax.library.ax_permission.model.Item.PermissionItem" />
-        <variable
-            name="isHighlighted"
-            type="Boolean" />
     </data>
 
     <com.ax.library.ax_permission.customview.InteractiveConstraintLayout
@@ -60,7 +57,7 @@
             android:layout_height="0dp"
             android:background="@drawable/bg_ax_permission_item_highlight_scrim"
             android:alpha="0.1"
-            android:visibility="@{isHighlighted ? View.VISIBLE : View.GONE}"
+            android:visibility="@{permissionItem.isHighlights ? View.VISIBLE : View.GONE}"
             tools:visibility="gone"
             android:clickable="false"
             android:focusable="false"
@@ -91,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/ax_permission_content_padding"
             tools:text="@string/ax_permission_draw_overlays_name"
-            android:text="@{permissionItem.permission.titleResId}"
+            android:text="@{permissionItem.titleResId}"
             android:textSize="18sp"
             android:textColor="@color/ax_permission_text_color_dark"
             android:textFontWeight="@integer/ax_permission_font_weight_bold_700"
@@ -132,7 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             tools:text="@string/ax_permission_draw_overlays_description"
-            android:text="@{permissionItem.permission.descriptionResId}"
+            android:text="@{permissionItem.descriptionResId}"
             android:textColor="@color/ax_permission_text_color_light"
             android:lineHeight="18sp"
             android:textSize="14sp"
