--- a/ax-permission/src/main/res/layout/fragment_permission_bottom_sheet_content.xml
+++ b/ax-permission/src/main/res/layout/fragment_permission_bottom_sheet_content.xml
@@ -58,6 +58,7 @@
         android:scrollbars="vertical"
         android:overScrollMode="ifContentScrolls"
         android:requiresFadingEdge="vertical"
+        android:fadingEdgeLength="24dp"
         app:layout_constraintHeight_default="wrap"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintBottom_toBottomOf="parent"
