--- a/ax-permission/src/main/res/layout/fragment_ax_permission_special_bottom_sheet.xml
+++ b/ax-permission/src/main/res/layout/fragment_ax_permission_special_bottom_sheet.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="@dimen/ax_permission_content_padding"/>
+        app:layout_constraintGuide_begin="8dp"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_bottom"
