--- a/ax-permission/src/main/res/layout/fragment_ax_permission_permanently_denied_bottom_sheet.xml
+++ b/ax-permission/src/main/res/layout/fragment_ax_permission_permanently_denied_bottom_sheet.xml
@@ -18,27 +18,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="18dp"/>
+        app:layout_constraintGuide_end="@dimen/ax_permission_content_padding"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="18dp"/>
+        app:layout_constraintGuide_begin="@dimen/ax_permission_content_padding"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="18dp"/>
+        app:layout_constraintGuide_end="@dimen/ax_permission_content_padding"/>
 
     <!-- 드래그 핸들 -->
     <View
         android:id="@+id/view_drag_handle"
-        android:layout_width="50dp"
-        android:layout_height="5dp"
+        android:layout_width="40dp"
+        android:layout_height="4dp"
         android:background="@drawable/bg_ax_permission_drag_handle"
         app:layout_constraintTop_toTopOf="@id/guideline_drag_handle"
         app:layout_constraintStart_toStartOf="@id/guideline_start"
@@ -90,7 +90,7 @@
                 android:textSize="14sp"
                 android:lineHeight="20sp"
                 android:textColor="@color/ax_permission_text_color_dark"
-                android:textFontWeight="@integer/ax_permission_font_weight_medium_500"/>
+                android:textFontWeight="@integer/ax_permission_font_weight_bold_700"/>
 
             <!-- 가이드 텍스트 (bullet 스타일, 기본 GONE) -->
             <androidx.appcompat.widget.AppCompatTextView
